--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,23 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "react",
     "strict": true,
+    "esModuleInterop": true,
+    "noImplicitThis": false,
+    "types": ["node"],
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+      "@/*": ["./src/*"]
+    },
+    "allowImportingTsExtensions": false
   },
   "include": [
+    "./src/**/*",
+    "./src/@types/**/*",
+    "index.d.ts",
+    "babel.config.js",
+    "index.js",
+    "declarations.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
