--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./src/assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
+    "assetBundlePatterns": ["**/src/*"],
     "splash": {
       "image": "./src/assets/images/splash.png",
       "resizeMode": "contain",
