--- a/package.json
+++ b/package.json
@@ -48,14 +48,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-native-vector-icons": "^6.4.18",
-    "@types/react-test-renderer": "^18.0.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.0",
@@ -64,8 +59,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-native-svg-transformer": "^1.5.0",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "react-test-renderer": "18.2.0"
   },
   "private": true
 }
