--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-masked-view/masked-view": "0.3.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.4.1",
+    "@types/react": "~18.2.79",
     "expo": "~51.0.21",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -44,6 +45,7 @@
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
+    "typescript": "~5.3.3",
     "validator": "^13.12.0"
   },
   "devDependencies": {
