--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx,json}'",
-    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'"
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}' --config ./.prettierrc"
   },
   "jest": {
     "preset": "jest-expo"
@@ -62,6 +63,7 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "prettier": "^3.3.3",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0"
   },
