--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}' --config ./.prettierrc"
+    "lint:fix": "eslint --fix 'src/*.{js,jsx,ts,tsx}'",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}' --config ./.prettierrc",
+    "fix": "yarn lint:fix && yarn format"
   },
   "jest": {
     "preset": "jest-expo"
