--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-element-dropdown": "^2.12.1",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.14.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
