--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-confirmation-code-field": "^7.4.0",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.16.1",
