--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
