--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "lottie-react-native": "^6.7.2",
+    "lottie-react-native": "6.7.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -44,7 +44,7 @@
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "^3.14.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
