--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.5",
