--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.21",
     "expo-web-browser": "~13.0.3",
     "lottie-react-native": "6.7.0",
     "prop-types": "^15.8.1",
