--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -54,3 +54,7 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+MYAPP_UPLOAD_STORE_FILE=besttransfer.keystore
+MYAPP_UPLOAD_KEY_ALIAS=besttransfer
+MYAPP_UPLOAD_STORE_PASSWORD=besttransfer
+MYAPP_UPLOAD_KEY_PASSWORD=besttransfer
