--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-element-dropdown": "^2.12.1",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
