notification and bug fixes

--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
         "foregroundImage": "./src/assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.besttransfer"
+      "package": "com.besttransfer",
+      "googleServicesFile" : "./android/app/google-services.json"
     },
     "plugins": [],
     "experiments": {
