--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,8 +89,9 @@ android {
         applicationId 'com.besttransfer'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 4
+        versionCode 5
         versionName "1.0.0"
+        missingDimensionStrategy 'react-native-camera', 'general'
     }
     signingConfigs {
         debug {
