--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-camera": "^4.2.1",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-device-info": "^14.0.0",
     "react-native-element-dropdown": "^2.12.1",
@@ -51,7 +52,9 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-onesignal": "^5.2.8",
+    "react-native-permissions": "^5.2.2",
     "react-native-progress": "^5.0.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-responsive-fontsize": "^0.5.1",
